# metal-xross

./: Cargo.toml  LICENSE  README.md  build.rs  truce.toml
.cargo/: config.toml
src/: editor.rs  effector.rs  lib.rs  main.rs  params.rs  plugin.rs  utils.rs  xross.rs
src/editor/: background.rs  equalizer.rs  knob.rs
src/editor/knob/: linear.rs  single.rs  stacked.rs
src/effector/: equalizer.rs  gain.rs  level.rs  noise_gate.rs
src/effector/gain/: crunch.rs  dist.rs  drive.rs  metal.rs
src/xross/: equalizer.rs  gain.rs  level.rs  noise_gate.rs
src/xross/gain/: crunch.rs  dist.rs  drive.rs  metal.rs
