[workspace]
members = ["xtask"]

[package]
name = "metal-xross"
version = "0.1.0"
edition = "2024"
default-run = "metal-xross-standalone"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "metal-xross-standalone"
path = "src/main.rs"


[[bin]]
name = "metal-xross-bundle"
path = "xtask/src/main.rs"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"] }
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
log = "0.4"
