[package]
name = "metal-xross"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "metal-xross-standalone"
path = "src/main.rs"
required-features = ["standalone"]

# Scaffolded default: CLAP + VST3 + standalone. To add LV2 / AU / AAX / VST2,
# add the matching feature + optional dep below (e.g.
# `lv2 = ["dep:truce-lv2"]` +
# `truce-lv2 = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4", optional = true }`).
# VST2 is a legacy format — the Steinberg VST2 SDK was deprecated in
# 2018 and distributing VST2 plugins may require agreement with
# Steinberg's licensing terms.
[features]
default = ["clap", "vst3", "standalone"]
clap = ["dep:truce-clap", "dep:clap-sys"]
vst3 = ["dep:truce-vst3"]
standalone = ["dep:truce-standalone"]
shell = ["truce/shell"]

[dependencies]
truce = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4" }
truce-gui = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4" }
truce-clap = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4", optional = true }
truce-vst3 = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4", optional = true }
truce-standalone = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4", features = ["gui"], optional = true }
clap-sys = { version = "0.5", optional = true }

[dev-dependencies]
truce-test = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4" }

# `truce-build` emits `TRUCE_PLUGIN_*` env vars (consumed by
# `plugin_info!()`) + a `rustc-check-cfg` declaration covering every
# format feature the `truce::plugin!` macro references. Without it,
# rustc fires `unexpected_cfgs` warnings for every format this
# crate doesn't declare.
[build-dependencies]
truce-build = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4" }

# Custom profile for `cargo truce install --shell`. The shell-mode
# build (`cargo build --profile shell --features ...,shell`) lands the
# shell binary at `target/shell/lib<crate>.dylib`, independent of
# `target/release/` (where regular `cargo build --release` writes) and
# `target/debug/` (where `cargo build` writes). Inherits release for
# DSP perf parity.
[profile.shell]
inherits = "release"
